--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,21 @@
-fastapi
-uvicorn
-python-multipart
-pymupdf
-sentence-transformers
-scikit-learn
-pandas
-# If you use fuzzy matching in the future, add: rapidfuzz
-# If you use spaCy in the future, add: spacy
-# For compatibility, pin numpy to <2.0
-numpy<2.0 
+# fastapi
+# uvicorn
+# python-multipart
+# pymupdf
+# sentence-transformers
+# scikit-learn
+# pandas
+# numpy<2.0 
+
+# # If you use fuzzy matching in the future, add: rapidfuzz
+# # If you use spaCy in the future, add: spacy
+# # For compatibility, pin numpy to <2.0
+
+fastapi==0.110.0
+uvicorn==0.29.0
+python-multipart==0.0.9
+pymupdf==1.23.7
+sentence-transformers==2.2.2
+scikit-learn==1.3.0
+pandas==2.2.2
+numpy==1.24.4
