--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,6 @@ uvicorn==0.29.0
 python-multipart==0.0.9
 pymupdf==1.23.7
 sentence-transformers==2.2.2
-scikit-learn==1.3.0
-pandas==2.2.2
-numpy==1.24.4
+# pandas==2.2.2
+# numpy==1.24.4
+# scikit-learn==1.3.0
